finished the project

--- a/style.css
+++ b/style.css
@@ -1,18 +1,3 @@
-.date {
-  font-size: 30px;
-  margin: 20px;
-  text-align: end;
-}
-p {
-  width: 400px;
-  margin: 20px;
-}
-img {
-  width: 400px;
-  height: 200px;
-  margin-left: 20px;
-  border: 5px solid grey;
-}
 body {
   font-family: 'Courier New', Courier, monospace;
   font-size: 16px;
@@ -21,8 +6,35 @@ body {
   font-size: large;
   font-weight: 700;
 }
+.date {
+  font-size: 30px;
+  margin: 20px;
+  text-align: end;
+}
+p {
+  margin: 20px;
+  width: 600px;
+}
+img {
+  width: 600px;
+  height: auto;
+  margin-left: 20px;
+  border: 5px solid grey;
+}
 iframe {
   margin: 20px;
-  width: 80%;
-  height: 300px;
+  width: 640px;
+  height: 360px;
+}
+@media screen and (max-width: 600px) {
+  p {
+    width: 400px;
+  }
+  img {
+    width: 400px;
+  }
+  iframe {
+    width: 400px;
+    height: 200px;
+  }
 }
